--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "jsx": "react",
     "module": "CommonJS",
     "strict": true,
-    "lib": ["es6", "dom"]
+    "lib": ["es6", "dom"],
+    "allowSyntheticDefaultImports": true
   },
   "exclude": [
     "./node_modules",
